Bug 1265154 - Fix compile error in MSVC 2013 caused by ArrayLength; r=heycam

MozReview-Commit-ID: DvyCNwTRiI7